# carbvis

./: .editorconfig  .gitignore  Justfile  README.md  pyproject.toml  rc.sh
src/: __builtins__.pyi  __init__.py  _carbs.pyi  _paperchain.pyi  _strand.pyi  _twister.pyi  _utils.pyi  carbs.py  cmd.py  coloring.py  model.py  paperchain.py  strand.py  twister.py  utils.py
src/docs/user/: carbvis.html
src/docs/user/commands/: color_bydihedral.html  paperchain.html  strand.html  twister.html
src_cy/chimerax/: __init__.pyx
src_cy/chimerax/arrays/: pythonarray.pxd
src_cy/chimerax/atomic_lib/: atomstruct.pxd
src_cy/chimerax/carbvis/: _carbs.pxd  _carbs.pyx  _paperchain.pyx  _strand.pyx  _twister.pyx  _utils.pxd  _utils.pyx
